Fixed navbar for when screen is too short

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,7 +12,7 @@ nav {
 
 .floating {
   transition: 0.3s;
-  height: 6vh !important;
+  height: 6vh;
   opacity: 0.7;
 }
 
@@ -172,5 +172,16 @@ nav .logo:hover {
     transform: translateY(-100%);
   }
 }
-
+/* for when screen is too short */
+@media screen and (max-height: 750px) {
+  .nav_links_wrapper {
+    display: none;
+  }
+  .nav_main_wrapper {
+    height: 4rem;
+  }
+  #landing-front {
+    margin-top: 4rem !important;
+  }
+}
 /* End header stuff*/
